--- a/.github/workflows/docker-image-frontend.yml
+++ b/.github/workflows/docker-image-frontend.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./frontend
-          file: ./Dockerfile
+          context: .
+          file: ./frontend/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           platforms: linux/amd64,linux/arm64
           push: true
