--- a/.github/workflows/docker-image-backend.yml
+++ b/.github/workflows/docker-image-backend.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./frontend/Dockerfile
+          context: ./backend
+          file: ./backend/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           platforms: linux/amd64,linux/arm64
           push: true
